  the QUEUE_DIR (not just queued .nzb files). This bug prevented hellanzb from
  working nicely with shared QUEUE_DIRs (such as your web browser's download
  dir. This technique was even recommended in hellanzb's OS X install
  document), in fact, it could cause unwanted data loss. The potential evilness
  of this bug has warranted an early 0.8 release (thanks yak)

NZBLeecher:

o Fixed a couple nasty bugs in the new downloader code (submitted by
  bobmckenzie, thanks!)

o Fixed "not1not2" KeyError exception in the multiple server pool automatic
  failover code (submitted by bobmckenzie, thanks again!)

o Fixed a bug causing the downloader to stop and the scroller to scroll
  excessive lines, after a certain situation where hellanzb was paused twice

o Correctly handling NZB files with out of order segments, previously this
  could cause corruption (thanks spinez)

o Fixed a bug causing the downloader to stop (at the end of an archive) after
  pausing/continuing with bandwidth throttling enabled (MAX_RATE set to
  a non zero value)


v0.7:

Daemon:

o Added the -D option to run the hellanzb queue daemon as an actual unix daemon
  process (forks and exits)

o Changed most of the RPC calls to return the output of a list or status
  call

o Added the enqueuenewzbin RPC call, downloads the NZB with the specified NZB ID
  from www.newzin.com, as long as you've included your newzbin login information
  in hellanzb.conf

o Changed the RPC list call to show NZB ids by default

o RPC status call now shows queued MB, ETA, NZB ids and the value of
  Hellanzb.MAX_RATE (if MAX_RATE is greater than 0)

o Invalid NZB files weren't being removed from the list of current downloads
  seen in the RPC status call (fixed)

o Fixed an odd case where a segment with no articleData could prevent the queue
  from continuing onto the next NZB. Also fixed a couple other possible bugs
  that might have caused hellanzb to deadlock in between NZBs

NZBLeecher:
